--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Podzolov</h1>
+      <h1 class="project-name">silver2steal</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/silver2steal/podzolov" class="btn">View on GitHub</a>
-      <a href="https://github.com/silver2steal/podzolov/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/silver2steal/podzolov/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/silver2steal/podzolov/zipball/master" class="btn">Random</a>
+      <a href="https://github.com/silver2steal/podzolov/tarball/master" class="btn">Contact</a>
     </section>
 
     <section class="main-content">
