--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">silver2steal</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/silver2steal/podzolov" class="btn">View on GitHub</a>
-      <a href="https://github.com/silver2steal/podzolov/Random.html" class="btn">Random</a>
+      <a href="https://github.com/silver2steal/podzolov/Random" class="btn">Random</a>
       <a href="https://github.com/silver2steal/podzolov/tarball/master" class="btn">Contact</a>
     </section>
 
